<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="sessions"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_sessions"
        android:shortcutShortLabel="@string/shortcut_sessions_short"
        android:shortcutLongLabel="@string/shortcut_sessions_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.uzairansar.hermex"
            android:targetClass="com.uzairansar.hermex.MainActivity"
            android:data="hermes-agent://sessions" />
    </shortcut>

    <shortcut
        android:shortcutId="new_session"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_new_session"
        android:shortcutShortLabel="@string/shortcut_new_session_short"
        android:shortcutLongLabel="@string/shortcut_new_session_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.uzairansar.hermex"
            android:targetClass="com.uzairansar.hermex.MainActivity"
            android:data="hermes-agent://sessions?shortcutAction=new" />
    </shortcut>

    <shortcut
        android:shortcutId="new_voice_session"
        android:enabled="true"
        android:icon="@drawable/ic_hermex_waveform"
        android:shortcutShortLabel="@string/shortcut_new_voice_short"
        android:shortcutLongLabel="@string/shortcut_new_voice_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.uzairansar.hermex"
            android:targetClass="com.uzairansar.hermex.MainActivity"
            android:data="hermes-agent://new-chat-voice" />
    </shortcut>

</shortcuts>
